load("@py_deps_py310//:requirements.bzl", ci_require = "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "workspace",
    srcs = ["workspace.py"],
    deps = [
        ci_require("pyyaml"),
    ],
)

py_library(
    name = "raydepsets_lib",
    srcs = [
        "__init__.py",
        "cli.py",
    ],
    data = ["//:uv_file"],
    deps = [
        ":workspace",
        ci_require("bazel-runfiles"),
        ci_require("click"),
        ci_require("networkx"),
        ci_require("pip_requirements_parser"),
        ci_require("pyyaml"),
    ],
)

py_binary(
    name = "raydepsets",
    srcs = ["raydepsets.py"],
    exec_compatible_with = ["//bazel:py3"],
    deps = [":raydepsets_lib"],
)

# ---------------------------------------------------------------------------
# Standalone binary (zipapp) — no Bazel runfiles or runtime needed.
#
# Build:
#   bazel run //ci/raydepsets:build_raydepsets_binary -- /output/path/raydepsets
#
# The builder vendors all Python deps into a self-contained zipapp.
# Copy the output anywhere and run:
#   ./raydepsets build <config_path> --workspace-dir /path/to/ray
#
# Prerequisites on the target machine:
#   - Python >= 3.10
#   - `uv` on $PATH  (or pass --uv-path /path/to/uv)
# ---------------------------------------------------------------------------

py_binary(
    name = "build_raydepsets_binary",
    srcs = ["build_zipapp.py"],
    data = [
        "__init__.py",
        "__main__.py",
        "cli.py",
        "workspace.py",
    ],
    exec_compatible_with = ["//bazel:py3"],
    main = "build_zipapp.py",
    visibility = ["//visibility:public"],
    deps = [
        ci_require("click"),
        ci_require("networkx"),
        ci_require("pip_requirements_parser"),
        ci_require("pyyaml"),
    ],
)

py_test(
    name = "test_cli",
    srcs = ["tests/test_cli.py"],
    data = [
        "tests/test_data/pre-hook-error-test.sh",
        "tests/test_data/pre-hook-test.sh",
        "tests/test_data/requirement_constraints_test.txt",
        "tests/test_data/requirements_compiled_large_test.txt",
        "tests/test_data/requirements_compiled_test.txt",
        "tests/test_data/requirements_compiled_test_expand.txt",
        "tests/test_data/requirements_compiled_test_update.txt",
        "tests/test_data/requirements_test.txt",
        "tests/test_data/test.depsets.yaml",
        "tests/test_data/test2.depsets.yaml",
    ],
    exec_compatible_with = ["//bazel:py3"],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ci_require("pytest"),
        ":raydepsets_lib",
        ":utils",
    ],
)

py_library(
    name = "utils",
    testonly = True,
    srcs = ["tests/utils.py"],
    deps = [
        ci_require("bazel-runfiles"),
    ],
)

py_test(
    name = "test_workspace",
    srcs = ["tests/test_workspace.py"],
    data = [
        "tests/test_data/test.depsets.yaml",
        "tests/test_data/test2.depsets.yaml",
    ],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ci_require("pytest"),
        ":utils",
        ":workspace",
    ],
)
